--- a/requirements.txt
+++ b/requirements.txt
@@ -47,4 +47,168 @@ pytest-mock>=3.12.0
 black>=23.11.0
 flake8>=6.1.0
 mypy>=1.7.0
-isort>=5.12.0
+isort>=5.12.0aioconsole==0.7.0
+aiofiles==24.1.0
+aiohttp==3.9.3
+aiosignal==1.3.2
+aiosqlite==0.19.0
+alembic==1.13.1
+amqp==5.3.1
+annotated-types==0.7.0
+anthropic==0.18.1
+anyio==4.9.0
+async-timeout==4.0.3
+asyncio-throttle==1.0.2
+asyncpg==0.29.0
+attrs==25.3.0
+beautifulsoup4==4.13.4
+billiard==4.2.1
+black==23.12.1
+celery==5.3.4
+certifi==2025.4.26
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.2
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
+contourpy==1.3.2
+coverage==7.8.2
+cryptography==45.0.3
+cycler==0.12.1
+dataclasses-json==0.6.7
+defusedcsv==2.0.0
+defusedxml==0.7.1
+Deprecated==1.2.18
+distro==1.9.0
+dnspython==2.4.2
+email_validator @ file:///home/conda/feedstock_root/build_artifacts/email-validator-meta_1733300719943/work
+exceptiongroup==1.3.0
+fastapi==0.109.0
+fastapi-cli @ file:///home/conda/feedstock_root/build_artifacts/fastapi-cli_1728947708687/work
+filelock==3.18.0
+flake8==7.0.0
+fonttools==4.58.2
+frozenlist==1.6.2
+fsspec==2025.5.1
+greenlet @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_3fdrsxa1og/croot/greenlet_1733860082149/work
+h11==0.16.0
+hf-xet==1.1.3
+httpcore==1.0.9
+httptools @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_15flooa1ra/croot/httptools_1732564161042/work
+httpx==0.27.0
+httpx-ntlm==1.4.0
+httpx-sse==0.4.0
+huggingface-hub==0.32.4
+idna==3.10
+iniconfig==2.1.0
+isort==6.0.1
+Jinja2==3.1.6
+jiter==0.10.0
+joblib==1.5.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+kiwisolver==1.4.8
+kombu==5.5.4
+langchain==0.3.25
+langchain-community==0.3.12
+langchain-core==0.3.63
+langchain-text-splitters @ file:///home/conda/feedstock_root/build_artifacts/langchain-text-splitters_1743799028984/work
+langsmith==0.1.147
+limits==5.2.0
+loguru==0.7.2
+lxml==5.4.0
+Mako==1.3.10
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib==3.8.2
+mccabe==0.7.0
+mcp==0.9.1
+mdurl==0.1.2
+multidict==6.4.4
+mypy==1.8.0
+mypy_extensions==1.1.0
+mysql-connector-python==9.3.0
+netaddr==0.10.1
+networkx==3.2.1
+ntlm-auth==1.5.0
+numpy==1.26.3
+openai==1.85.0
+orjson @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_8f6hki8ldu/croot/orjson_1737039630134/work
+packaging==23.2
+pandas==2.1.4
+pathspec==0.12.1
+pillow==11.2.1
+platformdirs==4.3.8
+pluggy==1.6.0
+prometheus-client==0.19.0
+prompt_toolkit==3.0.51
+propcache==0.3.1
+psutil==7.0.0
+psycopg==3.2.9
+psycopg-binary==3.2.9
+pycodestyle==2.11.1
+pycparser==2.22
+pydantic==2.11.5
+pydantic-settings==2.9.1
+pydantic_core==2.33.2
+pyflakes==3.2.0
+Pygments==2.19.1
+PyJWT==2.10.1
+pyOpenSSL==25.1.0
+pyparsing==3.2.3
+PySocks==1.7.1
+pyspnego==0.11.2
+pytest==7.4.4
+pytest-asyncio==0.21.1
+pytest-cov==6.1.1
+pytest-mock==3.12.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
+python-multipart==0.0.6
+python-nmap==0.7.1
+pytz==2025.2
+PyYAML==6.0.1
+redis==5.0.1
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+requests_ntlm==1.3.0
+rich==13.7.0
+scikit-learn==1.4.0
+scipy==1.15.3
+seaborn==0.13.2
+shellingham @ file:///home/conda/feedstock_root/build_artifacts/shellingham_1733300899265/work
+six==1.17.0
+slowapi==0.1.9
+sniffio==1.3.1
+soupsieve==2.7
+SQLAlchemy==2.0.25
+sse-starlette @ file:///home/conda/feedstock_root/build_artifacts/sse-starlette_1748621048885/work
+starlette==0.35.1
+tenacity==8.5.0
+threadpoolctl==3.6.0
+tiktoken==0.5.2
+tokenizers==0.21.1
+toml==0.10.2
+tomli==2.2.1
+tqdm==4.67.1
+typer==0.16.0
+typer-slim==0.16.0
+typing-inspect==0.9.0
+typing-inspection @ file:///home/conda/feedstock_root/build_artifacts/typing-inspection_1747870647094/work
+typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_typing_extensions_1748959427/work
+tzdata==2025.2
+urllib3==2.4.0
+uvicorn==0.27.0
+uvloop @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_1539mh1ss3/croot/uvloop_1732545180417/work
+validators==0.35.0
+vine==5.1.0
+watchfiles @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_e8ok395flg/croot/watchfiles_1732647865032/work
+wcwidth==0.2.13
+websockets==12.0
+wrapt==1.17.2
+yarl==1.20.0
